update production config

--- a/production.ini
+++ b/production.ini
@@ -14,7 +14,14 @@ pyramid.default_locale_name = en
 
 sqlalchemy.url = sqlite:///%(here)s/kralingsekost.sqlite
 
+mako.directories = kralingsekost:templates
+
 retry.attempts = 3
+
+secret = osksrinkeatgl
+
+upload_dir = /tmp
+
 
 [pshell]
 setup = kralingsekost.pshell.setup
