--- a/production.ini
+++ b/production.ini
@@ -12,7 +12,8 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/kralingsekost.sqlite
+env.use_env_variables = true
+sqlalchemy.url = DATABASE_URL
 
 mako.directories = kralingsekost:templates
 
