--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.1.0
 autopep8==1.4.3
 bcrypt==3.1.6
 cffi==1.11.5
+gunicorn==19.9.0
 hupper==1.4.2
 isort==4.3.4
 lazy-object-proxy==1.3.1
